# raspi-usb-sim

./: .gitignore  CHANGELOG.md  PROJECTS.md  README.md  poetry.toml  pyproject.toml  release_description_helper.py
.github/workflows/: python-app.yml
app/: Config.json  Config.py  Help.py  Icons.py  Install.py  Main.py  ProQrc.qrc  command.txt  device_proj.json
app/config/: Config.json  device_proj.json
app/scripts/: fswd.service  fswd.sh  install.sh  mount_app.py  mount_robot.py  requirements.txt  umtprd  umtprd.conf
app/src/: a_device.py  a_validator.py  acm_device.py  device_data.py  device_dictcreator.py  ecm_device.py  fscreator.py  hid_device.py  msc_device.py  mtp_device.py  ncm_device.py  rndis_device.py  samba_service.py  stdout_writer.py  uac_device.py  usb_peripheral.py  watchdog_service.py
testcases/resource/: example.robot  usbtool_config.json
wificonfig/: wpa_supplicant.conf
