[project]
name = "raspi-usb-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiaochuan Lu",email = "xiaochuan.lu@joynext.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
    python = "^3.10"
    requests = "^2.31.0"
    altgraph = "0.17.4"
    click = "8.1.7"
    colorama = "0.4.6"
    comtypes = "1.4.4"
    packaging = "24.1"
    pefile = "2023.2.7"
    pyinstaller = "^5.13.2"
    pyinstaller-hooks-contrib = "^2024.7"
    PyQt5 = "5.15.9"
    pyqt5-plugins = "5.15.9.2.3"
    PyQt5-Qt5 = "5.15.2"
    PyQt5-sip = "12.12.2"
    pyqt5-tools = "5.15.9.3.3"
    python-dotenv = "1.0.1"
    pywin32-ctypes = "0.2.2"
    qt5-applications = "5.15.2.2.3"
    qt5-tools = "5.15.2.1.3"
    six = "1.16.0"
    paramiko = "3.5.0"
    QLed = "1.3.1"
    Markdown = "3.7"
    robotframework = "7.0.0"
    scp = "0.15.0"

[tool.poetry]
package-mode = true
packages = [
	{ include = "app/Main.py"}
]

[tool.poetry.requires-plugins] 
poetry-plugin-shell = ">=1.0.1" 
poetry-plugin-dotenv = ">=2.9.1" 
poetry-plugin-truststore = ">=1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

